# urosim-python

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
protos/: urosim.proto
tests/: conftest.py  test_anatomy.py  test_client.py  test_coverage_points.py  test_distributions.py  test_mesh.py  test_nav.py  test_normals.py  test_placement.py  test_sdf.py  test_stones.py  test_texture_coords.py  test_topology.py
urosim/anatomy/: __init__.py  centerlines.py  coverage_points.py  distributions.py  generator.py  kidney_model.py  mesh_extract.py  normals.py  placement.py  sdf.py  stones.py  texture_coords.py  topology.py
urosim/client/: __init__.py  urosim_client.py
urosim/nav/: __init__.py  oracle.py
